# llm-prep

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml
cheat-sheets/: build.sh  compact-table.lua  general-interview.md  golang.md  infrastructure.md  llms.md  python.md  react.md  template.tex  typescript-node.md  vscode-hotkeys.html
codesignal-drills/: COMMANDS.md  README.md  toggle-codesignal-mode.sh
codesignal-drills/python/: README.md  drill_01_file_storage.py  drill_02_key_value_store.py  drill_03_feature_flag_service.py
codesignal-drills/typescript/: README.md  drill_01_file_storage.ts  drill_02_key_value_store.ts  drill_03_feature_flag_service.ts
companies/temporal/: README.md
courses/dropbox/: README.md
courses/fastapi/: README.md
courses/general-interview/: 00-before-you-start.md  README.md
courses/golang/: 00-go-prereqs.md  README.md
courses/infrastructure/: 00-computing-fundamentals.md  README.md
courses/llms/: 00-ai-foundations.md  README.md
courses/nodejs/: 00-ts-node-fundamentals.md  README.md
courses/python/: README.md  interview-practice.py
courses/python-fastapi/: 00-python-prereqs.md  README.md
courses/react/: 00-react-fundamentals.md  README.md
courses/solutions-engineering/: 00-role-landscape-and-prerequisites.md  README.md
courses/stripe/: 05-onsite-guide.md  05-onsite-interview-guide.md  README.md  snippets.html
(+521 files in other folders)
