[project]
name = "llm-prep"
version = "0.1.0"
description = "LLM interview prep study materials — foundations, prompt engineering, RAG, agents, and production patterns in Python"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["llm", "interview", "study", "prompt-engineering", "rag", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/Jdubz/llm-prep"
Repository = "https://github.com/Jdubz/llm-prep"
Issues = "https://github.com/Jdubz/llm-prep/issues"
Changelog = "https://github.com/Jdubz/llm-prep/blob/main/CHANGELOG.md"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
